# 2024ComputerProgramming

C++Project2024/: CMakeLists.txt
C++Project2024/src/: Beat.cpp  Beat.h  BeatSequence.cpp  BeatSequence.h  GameController.cpp  GameController.h  MainWindow.cpp  MainWindow.h  SequenceGenerator.cpp  SequenceGenerator.h  main.cpp
